United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6904191 OptimizeStringConcat should be product instead of experimental
6904191 : OptimizeStringConcat should be product instead of experimental

Details
Type:
Bug
Submit Date:
2009-11-24
Status:
Closed
Updated Date:
2011-03-08
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
solaris_9
Sub-Component:
compiler
CPU:
sparc
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs16
Fixed Versions:
hs16

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
The flag OptimizeStringConcat should be product instead of experimental

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/bd12fff78df5
                                     
2009-12-01
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/baseline/rev/43e3f86b638d
                                     
2009-11-26
EVALUATION

http://hg.openjdk.java.net/hsx/hsx16/master/rev/43e3f86b638d
                                     
2009-11-26
EVALUATION

ok
                                     
2009-11-24



Hardware and Software, Engineered to Work Together