6904191: OptimizeStringConcat should be product instead of experimental

Make OptimizeStringConcat a product VM option(contributed by never)

Reviewed-by: never